--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "19.0.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
+    "react-slick": "^0.30.3",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
